refactor models to implement delete onCascade
