# docs/swagger.yaml
@@ -69,6 +69,8 @@ definitions:
         type: string
       mahasantri_id:
         type: integer
+      mentor_id:
+        type: integer
       total_setoran:
         minimum: 0
         type: number
@@ -82,6 +84,7 @@ definitions:
     - juz
     - kategori
     - mahasantri_id
+    - mentor_id
     - total_setoran
     - waktu
     type: object
@@ -1062,6 +1065,65 @@ paths:
         dan filtering
       tags:
       - Hafalan
+  /api/v1/hafalan/mentor/{mentor_id}:
+    get:
+      consumes:
+      - application/json
+      description: Endpoint ini digunakan untuk mengambil data hafalan berdasarkan
+        MentorID, dengan dukungan filtering berdasarkan kategori dan juz serta pagination.
+      parameters:
+      - description: ID Mentor
+        in: path
+        name: mentor_id
+        required: true
+        type: integer
+      - description: Filter by kategori
+        enum:
+        - ziyadah
+        - murojaah
+        in: query
+        name: kategori
+        type: string
+      - description: Filter by juz
+        example: 1, 2
+        in: query
+        name: juz
+        type: string
+      - default: 1
+        description: Page number for pagination
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: Number of items per page
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Hafalan fetched successfully
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Invalid request parameters
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Mentor or Mahasantri not found
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Failed to fetch hafalan
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - BearerAuth: []
+      summary: Mengambil semua hafalan berdasarkan MentorID dengan pagination dan
+        filtering
+      tags:
+      - Hafalan
   /api/v1/mahasantri:
     get:
       consumes:
@@ -1079,6 +1141,10 @@ paths:
         in: query
         name: limit
         type: integer
+      - description: Search by name
+        in: query
+        name: name
+        type: string
       produces:
       - application/json
       responses:
