# routes/mahasantri_routes.go
@@ -10,12 +10,12 @@ import (
 func SetupMahasantriRoutes(app *fiber.App, db *gorm.DB) {
 	service := services.MahasantriService{DB: db}
 
-	mahasantriRoutes := app.Group("/api/v1/mahasantri", middleware.JWTMiddleware)
+	mahasantriRoutes := app.Group("/api/v1/mahasantri")
 	{
-		mahasantriRoutes.Get("/", middleware.RoleMiddleware("mentor"), service.GetAllMahasantri)
-		mahasantriRoutes.Get("/:id", middleware.RoleMiddleware("mentor", "mahasantri"), service.GetMahasantriByID)
-		mahasantriRoutes.Get("/mentor/:mentor_id", middleware.RoleMiddleware("mentor"), service.GetMahasantriByMentorID)
-		mahasantriRoutes.Put("/:id", middleware.RoleMiddleware("mentor", "mahasantri"), service.UpdateMahasantri)
-		mahasantriRoutes.Delete("/:id", middleware.RoleMiddleware("mentor"), service.DeleteMahasantri)
+		mahasantriRoutes.Get("/", service.GetAllMahasantri)
+		mahasantriRoutes.Get("/:id", middleware.JWTMiddleware, middleware.RoleMiddleware("mentor", "mahasantri"), service.GetMahasantriByID)
+		mahasantriRoutes.Get("/mentor/:mentor_id", middleware.JWTMiddleware, middleware.RoleMiddleware("mentor"), service.GetMahasantriByMentorID)
+		mahasantriRoutes.Put("/:id", middleware.JWTMiddleware, middleware.RoleMiddleware("mentor", "mahasantri"), service.UpdateMahasantri)
+		mahasantriRoutes.Delete("/:id", middleware.JWTMiddleware, middleware.RoleMiddleware("mentor"), service.DeleteMahasantri)
 	}
 }
